<resources>
    <!-- common -->
    <string name="app_name">comfyflat-mobile</string>
    <string name="cancel">Отмена</string>
    <string name="refresh">Обновить</string>
    <string name="ok">OK</string>
    <string name="loading">Загрузка…</string>

    <!--Auth screen-->
    <string name="auth_title">Авторизация</string>
    <string name="invalid_hash">Invalid auth response!</string>
    <string name="auth_error">Unknown error! Try again later</string>
    <string name="custom_auth_menu">Custom server</string>
    <string name="custom_authorization">Сервер</string>
    <string name="url">Url</string>
    <string name="server_path_hint">ws://www.example.com</string>
    <string name="realm_hint">default</string>
    <string name="realm">Realm</string>
    <string name="connect">Подключиться</string>
    <string name="empty_server_url">Url не задан!</string>
    <string name="empty_realm">Realm не задан!</string>
    <string name="logo_text">comfyflat-mobile</string>
    <string name="login_text">Логин</string>
    <string name="password_text">Пароль</string>
    <string name="submit">Применить</string>
    <string name="rooms_title">Комнаты</string>

    <!--Zero screen-->
    <string name="empty_error">Упс!</string>
    <string name="empty_error_description">Что-то пошло не так.\n Пожалуйста, повторите попытку позже.</string>
    <string name="empty_data">Нет данных</string>
    <string name="empty_data_description">У вас еще нет данных.\n Пожалуйста, попробуйте позже.</string>

    <!--Projects screen-->
    <string name="projects_title">Комнаты</string>
    <string name="my_projects_title">My projects</string>
    <string name="starred_projects_title">Starred</string>
    <string name="all_projects_title">All</string>

    <!--Navigation drawer-->
    <string name="projects_item">Projects</string>
    <string name="activity_item">Activity</string>
    <string name="rooms_item">Комнаты</string>
    <string name="groups_item">Groups</string>
    <string name="settings_item">Settings</string>
    <string name="about_item">Помощь</string>
    <string name="exit">Выйти</string>
    <string name="logout_question">Выйти?</string>
    <string name="add_session">Добавить сессию</string>

    <!--About screen-->
    <string name="about_title">About</string>
    <string name="about_info">Информация</string>
    <string name="about_developers">Разработчики</string>

    <!--Room screen-->
    <string name="room_name_default">Комната</string>
</resources>
