<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back_24dp"
            app:title="@string/auth_title" />


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="56dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

            <TextView android:id="@+id/logo"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="24dp"
                      android:layout_marginTop="24dp"
                      android:text="@string/logo_text"
                      android:textColor="@color/colorPrimary"
                      android:gravity="center"
                      android:textSize="32sp"
                      android:textStyle="bold"/>

            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColorHint="@color/secondary_text"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/urlValue"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/url"/>
            </android.support.design.widget.TextInputLayout>

            <!--  Password Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:textColorHint="@color/secondary_text"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/realmValue"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/realm"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/connectButton"
                    android:textColor="@color/white"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="24dp"
                    android:padding="18dp"
                    android:text="@string/connect"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>

