<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/customAuthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/custom_authorization"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <EditText
        android:id="@+id/serverPathValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:hint="@string/server_path_hint"
        android:imeOptions="actionDone"
        android:inputType="textShortMessage"
        android:lines="1"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/customAuthTitle" />

    <TextView
        android:id="@+id/serverPathLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_path"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/serverPathValue"
        app:layout_constraintEnd_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serverPathValue" />

    <TextView
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/submitButton"
        app:layout_constraintTop_toBottomOf="@id/serverPathValue" />

</android.support.constraint.ConstraintLayout>